--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_WALLET_CONNECT_PJID=""
-NEXT_PUBLIC_MEMBERREGISTRY_ADDR=
-NEXT_PUBLIC_ADMINISTERNFT_ADDR=
-NEXT_PUBLIC_MEMBERNFT_ADDR=
-NEXT_PUBLIC_BADGENFT_ADDR=
-NEXT_PUBLIC_PJDAOFACTORY_ADDR=
-NEXT_PUBLIC_ADMINTIMELOCKCONTROLLER_ADDR=
+NEXT_PUBLIC_WALLET_CONNECT_PJID="af34a5fba98e5e8d0e797bd1a977b920"
+NEXT_PUBLIC_MEMBERREGISTRY_ADDR=0x5FbDB2315678afecb367f032d93F642f64180aa3
+NEXT_PUBLIC_ADMINISTERNFT_ADDR=0xe7f1725e7734ce288f8367e1bb143e90bb3f0512
+NEXT_PUBLIC_MEMBERNFT_ADDR=0x9fe46736679d2d9a65f0992f2272de9f3c7fa6e0
+NEXT_PUBLIC_BADGENFT_ADDR=0xcf7ed3acca5a467e9e704c703e8d87f634fb0fc9
+NEXT_PUBLIC_PJDAOFACTORY_ADDR=0xdc64a140aa3e981100a9beca4e685f962f0cf6c9
+NEXT_PUBLIC_ADMINTIMELOCKCONTROLLER_ADDR=0x5fc8d32690cc91d4c39d9d3abcbd16989f875707
