--- a/contract/package.json
+++ b/contract/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@openzeppelin/contracts": "4.8.2",
+    "dotenv": "^16.0.3",
     "typescript": "^4.9.5"
   }
 }
